# Exercise

./: .gitignore
exercise1/: readme.md
exercise1/cpp/: CMakeLists.txt  main.cpp  molecular.cpp  molecular.h
exercise1/python/: h2o.xyz  molecular.py  periodic_table.py
exercise2/: readme.md
exercise2/cpp/: CMakeLists.txt  main.cpp  timer.hpp
exercise2/python/: matrix_mul.py
exercise3/: readme.md
exercise3/cpp/: CMakeLists.txt  main.cpp  matrix.hpp
exercise3/python/: huckel.py
exercise4/: readme.md
exercise4/cpp/: CMakeLists.txt  note.py
exercise4/cpp/src/: main.cpp  pybind.cpp
exercise4/cpp/src/core/: integral.hpp  matmul.hpp
exercise4/cpp/src/pybind/: pybind_core.hpp
exercise4/cpp/src/pybind/core/: matmul.cpp
exercise4/python/: build.py  integral.py  test_build.py
exercise4/python/libcint/: CMakeLists.txt
exercise4/python/libcint/libcint-6.1.3/: ChangeLog  README.rst
exercise4/python/libcint/libcint-6.1.3/src/: cart2sph.c  cint1e.c  fmt.c  g1e.c  rys_roots.h
exercise6/: readme.md
exercise6/python/: davidson.py  myfci.py
exercise7/python/: rhf.py
zsy-molecular-project/: h2o.xyz  molecular.py
